--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,26 +1,39 @@
+@import url("https://fonts.googleapis.com/css2?family=Source+Sans+Pro:ital,wght@0,300;0,400;0,600;1,400&display=swap");
+
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 html,
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-}
-
-a {
-  color: inherit;
-  text-decoration: none;
+  font-family: "Source Sans Pro", sans-serif;
 }
 
 * {
   box-sizing: border-box;
+  text-decoration: none;
 }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
+.main-container {
+  max-width: 1300px;
+  width: 100%;
+  padding: 0 30px;
+}
+
+@layer components {
+  .nav_li {
+    @apply cursor-pointer relative h-[30px] flex items-center;
   }
-  body {
-    color: white;
-    background: black;
+
+  .nav_li-hidden {
+    @apply absolute w-auto py-2 top-8  border-[1px] border-[rgba(0,0,0,0.15)] hidden bg-white rounded text-[#212529];
+  }
+  .nav_li-link {
+    @apply pl-7 py-1 hover:bg-gray-100 block pr-16;
   }
 }
+/* .nav_li{
+  display: flex;
+} */
